Fix overflow

--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -6,16 +6,13 @@ https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+cli
  * @author Rose Pritchard
  */
 
-pre[class*='language-'],
-pre[class*='language-'] > code {
+pre[class*='language-'] {
+  width: 100%;
   color: #a9a9b3;
   background: none;
   font-family: var(--monospace-font);
   text-align: left;
   white-space: pre-wrap;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
 
   -moz-tab-size: 4;
   -o-tab-size: 4;
@@ -31,11 +28,12 @@ pre[class*='language-'] > code {
 pre[class*='language-'] {
   padding: 1em;
   overflow: auto;
-}
-
-pre[class*='language-'] {
   background: #1a1a1d !important;
   border-radius: var(--border-radius);
+}
+
+.token {
+  word-break: break-word;
 }
 
 .token.comment,
@@ -211,38 +209,4 @@ div.code-toolbar > .toolbar span:hover,
 div.code-toolbar > .toolbar span:focus {
   color: inherit;
   text-decoration: none;
-}
-
-.command-line-prompt {
-  border-right: 1px solid #999;
-  display: block;
-  float: left;
-  font-size: 100%;
-  letter-spacing: -1px;
-  margin-right: 1em;
-  pointer-events: none;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.command-line-prompt > span:before {
-  color: #999;
-  content: ' ';
-  display: block;
-  padding-right: 0.8em;
-}
-
-.command-line-prompt > span[data-user]:before {
-  content: '[' attr(data-user) '@' attr(data-host) '] $';
-}
-
-.command-line-prompt > span[data-user='root']:before {
-  content: '[' attr(data-user) '@' attr(data-host) '] #';
-}
-
-.command-line-prompt > span[data-prompt]:before {
-  content: attr(data-prompt);
 }
